[package]
name = "mehsh"
version = "0.1.0"
authors = ["timglabisch <tim@ainfach.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
structopt = "0.3.*"
futures = "0.3"
failure = "0.1.*"
serde = { version = "1.0", features = ["derive"] }
bytes = "0.5.3"
rand = "*"

[dependencies.tokio]
version = "0.2"
default-features = true
features = ["full"]
