[package]
name = "mehsh_check"
version = "0.1.0"
authors = ["timglabisch <tim@ainfach.de>"]
edition = "2018"

[dependencies]
structopt = "0.3.*"
futures = "0.3"
failure = "0.1.*"
bytes = "0.5.3"
rand = "*"
chrono = "0.4"
reqwest = "0.11.*"
hostname = "0.3.1"
mehsh_common = { path = "../mehsh_common" }

[dependencies.tokio]
version = "1.*"
default-features = true
features = ["full"]
