[package]
name = "mehsh_check"
version = "0.1.0"
authors = ["timglabisch <tim@ainfach.de>"]
edition = "2018"

[dependencies]
structopt = "0.3.*"
futures = "0.3.*"
failure = "0.1.*"
bytes = "1.*"
rand = "*"
chrono = "0.4.*"
reqwest = { version = "0.11.*", features = ["rustls-tls"] }
hostname = "0.3.*"
anyhow = "1.*"
serverdensity_udpserver_lib = { git = "https://github.com/easybill/serverdensity-udp-agent", branch = "master" }
mehsh_common = { path = "../mehsh_common" }

[dependencies.tokio]
version = "1.*"
default-features = true
features = ["full"]
