[package]
name = "mehsh_check"
version = "0.1.0"
authors = ["timglabisch <tim@ainfach.de>"]
edition = "2018"

[dependencies]
clap = { version = "4.*", features = ["derive"] }
futures = "0.3.*"
bytes = "1.*"
rand = "*"
chrono = "0.4.*"
reqwest = { version = "0.12.*", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots"] }
hostname = "0.4.*"
anyhow = "1.*"
openmetrics_udpserver_lib = { git = "https://github.com/easybill/serverdensity-udp-agent", branch = "master" }
mehsh_common = { path = "../mehsh_common" }

[dependencies.tokio]
version = "1.*"
default-features = true
features = ["full"]
